crates/pgt_cli/tests/commands/snapshots/main__commands__check__check_directory_traversal_snapshot.snap
---
source: crates/pgt_cli/tests/commands/check.rs
expression: "run_check_with(&[\"check\", \"--diagnostic-level\", \"info\", \".\"], None,\nSome(project_dir))"
snapshot_kind: text
---
status: failure
stdout:
Checked 2 files in <duration>. No fixes applied.
Found 2 errors.
stderr:
./bad.sql:1:1 syntax ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid statement: syntax error at or near "tqjable"
  
  > 1 │ alter tqjable bad drop column id;
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ 
  

./another_bad.sql:1:1 syntax ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Invalid statement: syntax error at or near "tqjable"
  
  > 1 │ alter tqjable another drop column id;
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ 
  

check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
