crates/pgt_cli/tests/commands/snapshots/main__commands__check__check_github_reporter_snapshot.snap
---
source: crates/pgt_cli/tests/commands/check.rs
expression: "run_check(&[\"--reporter\", \"github\"])"
snapshot_kind: text
---
Warning: You are using the deprecated config filename 'postgrestools.jsonc'. Please rename it to 'postgres-language-server.jsonc'. Support for the old filename will be removed in a future version.

::error title=syntax,file=tests/fixtures/test.sql,line=1,endLine=1,col=1,endColumn=35::Invalid statement: syntax error at or near "tqjable"
